# django-starter

./: .dockerignore  .env.example  .flake8  .gitignore  README.md  makefile  pyproject.toml
core/: settings.py
core/settings/: base.py  dev.py  prod.py
docker/dev/: docker-compose.yml
docker/prod/: Dockerfile  docker-compose.yml  entrypoint.sh
